--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
 AuthType Basic
 AuthName "Protected Site"
-AuthUserFile /usr/home/yourusername/.htpasswd
+AuthUserFile .htpasswd
 require valid-user
